fix(WorkExperience): add margin-top to title for improved spacing

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1030,6 +1030,7 @@ textarea {
   font-weight: 500;
 }
 .work-experience .profile__header--title {
+  margin-top: 0.2rem;
   color: var(--color-zinc-400);
 }
 .work-experience .profile__contact {
